chore: move files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
             
             - name: Install dependencies
               run: npm install
+              working-directory: ./ci
 
             - name: Run tests
               run: npm test
+              working-directory: ./ci
