--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                 node-version: ${{ matrix.node-version }}
-                
+
             - name: Install dependencies
               run: npm install
               working-directory: ./ci
@@ -105,6 +105,6 @@ jobs:
               run: |
                 ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{secrets.SERVER_USER}}@${{ secrets.SERVER_HOST}} << 'EOF'
                     cd /home/${{ secrets.SERVER_USER }}/backend
-                    docker compose pull
-                    docker compose up -d 
+                    sudo docker compose pull
+                    sudo docker compose up -d 
                 EOF
