--- a/react-f-d-r-m/ci.yml
+++ b/react-f-d-r-m/ci.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: "lts/*"
           cache: "npm"
-          cache-dependency-path: app/frontend/package-lock.json
+          cache-dependency-path: package-lock.json
       
       - name: Install dependencies
         run: npm ci
@@ -64,7 +64,7 @@ jobs:
 
       - name: Integration/Smoke tests (develop)
         if: ${{ github.base_ref == 'develop' }}
-        run: npm test:integration
+        run: npm run test:integration
 
       - name: E2E tests (release)
         if: ${{ github.base_ref == 'release' }}
@@ -143,7 +143,7 @@ jobs:
           path: dist
 
       - name: Configure AWS credentials
-        uses: aws-action/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ap-northeast-2
@@ -154,5 +154,5 @@ jobs:
           PREFIX: releases/${{ steps.meta.outputs.timestamp }}_${{ steps.meta.outputs.short_sha }}
         run: |
           aws s3 cp dist/ \
-            s3://$BUCKET/$PREFIX/frontend \
+            s3://$BUCKET/$PREFIX/frontend/ \
             --recursive
