--- a/react-f-d-r-m/ci.yml
+++ b/react-f-d-r-m/ci.yml
@@ -98,6 +98,9 @@ jobs:
       - name: Prettier check
         run: npm run format:check
 
+  # ----------------------------
+  # 4. Artifacts (develop / release)
+  # ----------------------------
   artifacts:
     name: Upload Verified Artifact
     runs-on: ubuntu-latest
@@ -122,7 +125,9 @@ jobs:
           path: dist/**
           retention-days: ${{ github.base_ref == 'develop' && 90 || 30 }}
 
-  
+  # ----------------------------
+  # 5. Main → S3 Archive
+  # ----------------------------
   main_archive:
     name: Archive to S3
     runs-on: ubuntu-latest
